# livepay-academy

./: .gitignore  .railwayignore  DEPLOYMENT_READY.md  HEALTH_CHECK_REPORT.md  README.md  TODO.md  health-check.sh  railway.json  railway.toml  start-services.bat  start-services.sh  start.sh  vercel.json
backend/: .database-verification.js  .env.example  .gitignore  .railwayignore  Dockerfile  README.md  docker-compose.yml  railway.json  railway.toml  run-services.sh  start.sh  verify-deployment.js
backend/contracts/: livegate-domain.json
backend/java-service/: .dockerignore  .env.example  Dockerfile  pom.xml
backend/mysql/: seed-demo-users.sql
backend/nodejs-service/: .env.example  .env.template  (+5 more)
backend/python-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/python-service/app/: main.py
backend/python-service/app/api/routes/: analytics.py  fraud.py  health.py  moderation.py  rankings.py  recommendations.py
backend/python-service/app/clients/: __init__.py  cache.py  database.py  service_database.py
backend/python-service/app/core/: config.py  logging.py
backend/python-service/app/dependencies/: security.py
backend/python-service/app/jobs/: scheduler.py
backend/python-service/app/schemas/: analytics.py  common.py  fraud.py  moderation.py  recommendations.py
backend/python-service/app/services/: analytics.py  fraud.py  moderation.py  ranking.py  recommendations.py
backend/python-service/livegate_python_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .cspell.json  package-lock.json  package.json
(+389 files in other folders)
